# passm

./: .gitignore  Cargo.toml  Readme.md
assets/: banner.txt
src/: cli.rs  encryption.rs  error.rs  main.rs  storage.rs  ui.rs
src/vault/: analyze.rs  create.rs  generate.rs  mod.rs  view.rs
