[package]
name = "pass"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10.4"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
aes-gcm = "0.10.1"
sha2 = "0.10.6"
base64 = "0.21.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
zxcvbn = "2.2.1"
console = "0.15.10"


