[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
indicatif = "0.17.7"
console = "0.15.7"
tabled = "0.14.0"
spinners = "4.1.1"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
base64 = "0.21.5"
argon2 = "0.5.2"

